Bug 581422: Improve the readability of the text at the top of the attachment detail view r=pyrzak, r=mkanat, a=mkanat

--- a/skins/standard/attachment.css
+++ b/skins/standard/attachment.css
@@ -155,7 +155,7 @@ table.attachment_info td {
 }
 
 #attachment_information_read_only .details {
-    font-family: monospace;
+    font-size: 90%;
 }
 
 #attachment_info.read #attachment_information_edit {
